--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,13 @@ name: Hello world workflow
 on: 
   push:
   workflow_dispatch:
+env:
+  docker_username: ${{ github.actor }}
+  docker_password: ${{ secrets.GITHUB_TOKEN }}
+  GIT_COMMIT: ${{ env.GIT_COMMIT }}
+  
 jobs:
-  my-job:
+  Build:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
     steps:
@@ -20,5 +25,19 @@ jobs:
         uses: actions/upload-artifact@v3
         with: 
           name: code
-          path: .
+          path: app/build/libs/app-0.1-all.jar
           
+  Docker-image:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    permissions:
+      packages: write
+    steps:
+      - name: Download repo
+        uses: actions/download-artifact@v3
+        with:
+          name: code
+      - name: build docker
+        run: chmod +x ci/build-docker.sh && ci/build-docker.sh
+      - name: push docker
+        run: chmod +x ci/push-docker.sh && ci/push-docker.sh
