--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,6 @@ jobs:
         with:
           name: code
       - name: build docker
-        run: chmod +x ci/build-docker.sh && ci/build-docker.sh
+        run: ci/build-docker.sh
       - name: push docker
-        run: chmod +x ci/push-docker.sh && ci/push-docker.sh
+        run: ci/push-docker.sh
